add content for page 1,2, and part of 3

--- a/index.html
+++ b/index.html
@@ -6,10 +6,49 @@
   </head>
   <body>
     <div id="page1">
-      <h1>Protect Glove. INC.</h1>
-      <h2>Award Winning Hand Care</h2>
-      <h3>Dental Examination Gloves</h3>
+      <h1>PROTECT GLOVE. INC.</h1>
+      <h2>AWARD WINNING HAND CARE</h2>
+      <h3>DETNAL EXAMINATION GLOVES</h3>
       <h2>1-800-3442851</h2>
+      <h2>ONE FULL YEAR $$$ EXTREME SAVINGS!</h2>
+      <h2>DOUBLE REWARDS</h2>
+      <h1>2000 FREE GLOVES</h1>
+      <h2>REWARDS ALL YEAR</h2>
+      <h3>EVERY 7 CASES OVER ANY PERIOD OF TIME SAVE OVER $1.00 ON EVERY 100 GLOVES YOU BUY! BEST PRICE - BEST QUALITY - BEST REWARDS!</h3>
+      <div class="contactBlock">
+          <h2>CONTACT US</h2>
+          <h2>email - proglove@msn.com</h2>
+          <h2> To place Order</h2>
+      </div>
+    </div>
+    <div id="page2">
+      <h2>AWARD WINNING HAND CARE<br>DENTAL EXAMINATION GLOVES</h2>
+      <h3>ATTRACTIVE - FUN - COOL COLORS!</h3>
+      <h3>PLUS PREMIUM - BLUE/PURPLE NITRILE - GREAT PRICE!</h3>
+      <h3>GREAT PRICE - BEST QUALITY - BEST REWARDS!</h3>
+      <p>FREE GLOVES - REWARDS <br>SAVEBR<br>50 TO 70 CENTS<br>EVERY 100 GLOVES</p>
+      <h1>FREQUENT BUYER REWARDS!</h1>
+      <p>Just buy 7 cases, over any period of time and choose your reward!</p>
+      <p>1000 FREE GLOVES or $50.00 gift card to a retail establisment of your choice!</p>
+      <h2>CALL or email for a FREE sample today!</h2>
+      <p>Give us your name, Doctor's name/clinic name, complete address,phone number, and a list of of sizes your office uses. EASY!</p>
+      <div class="split container">
+        <div class="orderNow">
+          <h2>ORDER NOW!</h2>
+        </div>
+        <div class="callTodayblock">
+          <h5>CALL TODAY or EMAIL PROTECT GLOVE</h5>
+          <p>1-800-344-2851 or email proglove@msn.com</p>
+        </div>
+      </div>
+      <h3>FREE FREIGHT - NO HANDLING FEES!</h3>
+    </div>
+    <div id="page3">
+      <h2>ULTIME QUALITY!</h2>
+      <h1>LOWEST PRICE * BEST REWARDS!</h1>
+      <div class="Adeena">
+
+      </div>
     </div>
 
   </body>
