add all content for page 3

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p>1000 FREE GLOVES or $50.00 gift card to a retail establisment of your choice!</p>
       <h2>CALL or email for a FREE sample today!</h2>
       <p>Give us your name, Doctor's name/clinic name, complete address,phone number, and a list of of sizes your office uses. EASY!</p>
-      <div class="split container">
+      <div id="page3Container1">
         <div class="orderNow">
           <h2>ORDER NOW!</h2>
         </div>
@@ -46,8 +46,45 @@
     <div id="page3">
       <h2>ULTIME QUALITY!</h2>
       <h1>LOWEST PRICE * BEST REWARDS!</h1>
-      <div class="Adeena">
-
+      <div class="Adenna">
+        <div class="AdennaDetails">
+          <h4>ADENNA MIRACLE - BULE NITRILE GLOVE </h4>
+          <p>Only 5.75 per 100 gloves</p>
+          <p>11.50 per box 200 gloves</p>
+          <p>10 boxes per case - 2000 gloves</p>
+          <p>After reward price 5.25 per 100 gloves</p>
+        </div>
+        <div class="CliniciansReport">
+        <p>cClinicians Report</p>
+        <p>CR BUYING GUIDE</p>
+        <p>MIRACLE - BEST PRODUCT</p>
+        <p>87% of evaluators recommed this product!</p>
+        </div>
+      </div>
+      <div class="StarMedPlus">
+        <h4>STAR MED PLUS - ROYAL PURPLE NITRILE</h4>
+        <p>GREAT PRICE only 5.65 per 100 gloves</p>
+        <p>16.95 per box - 300 gloves</p>
+        <p>10 boxes per case  $169.50 per case - 3000 gloves</p>
+        <p>After reward prices $5.15 per 100 gloves.
+        </p>
+      </div>
+      <h1>FREE GLOVES ALL YEAR!</h1>
+      <p>Just by 7 cases, over any period of time and choose your reward!</p>
+      <p>1000 free gloves or 50.00 gift card</p>
+      <p>to the establisment of your choice</p>
+      <p>mixed sizes or brands acceptable to form full case</p>
+      <div class="page3Container2">
+        <div class="">
+          <p>SAVE</p>
+          <p>50 to 70 cents</p>
+          <p>EVERYONE 100 GLOVES YOU BUY!</p>
+        </div>
+        <div class="contactBlock">
+            <h2>CONTACT US</h2>
+            <h2>email - proglove@msn.com</h2>
+            <h2> To place Order</h2>
+        </div>
       </div>
     </div>
 
