add all content for page 4

--- a/index.html
+++ b/index.html
@@ -87,6 +87,45 @@
         </div>
       </div>
     </div>
+    <div id="page4">
+      <h3>ATTRACTIVE COLORS PLUS HEALTHY HANDS FOREVER!</h3>
+      <h3>AWARD WINNING NITRILE GLOVES WITH MOISTUIRIZERS!</h3>
+      <div class="boxes">
+        <div class="oceanBox">
+          <h4>"OCEAN"</h4>
+          <h4>Cool Aqua Blue</h4>
+          <h4>#1 Nitrile</h4>
+          <h4>New York Dental Show</h4>
+        </div>
+        <div class="coralBox">
+          <h4>"CORAL"</h4>
+          <h4>FRESH, light citrus scent</h4>
+          <h4>#1 Nitrile</h4>
+          <h4>Hawaii Dental Show</h4>
+        </div>
+        <div class="hotpinkBox">
+          <h4>"HOT PINK"</h4>
+          <h4>with ALLO-GEL</h4>
+          <h4>#1 Nitrile</h4>
+          <h4>Miami Beach Dental Show2017</h4>
+        </div>
+        <div class="bluemaxBox">
+          <h4>with ALLO-GEL</h4>
+          <h4>#1 Nitrile</h4>
+          <h4>Miami Beach Dental Show2016</h4>
+        </div>
+      </div>
+      <h4>SUPER stretchy - 2nd skin feel - comfortable fit!</h4>
+      <h4>ONLY 6.49 per box of 100 gloves!</h4>
+      <h4>20 boxesd per case - mix sizes and brands to make a full case!</h4>
+      <div class="callTodayblock">
+        <h5>CALL TODAY or EMAIL <br>PROTECT GLOVE</h5>
+        <p>1-800-344-2851 or email proglove@msn.com</p>
+      </div>
+      <h4>FREQUENT BUYER REWARDS - ALL YEAR LONG!</h4>
+      <p>Jusy buy 7 cases, over any period of time and choose your reward!</p>
+      <p>1000 FREE GLOVES or $50.00 gift card to a retail establishment of your choice!!</p>
+    </div>
 
   </body>
 </html>
