add completed page 6.Contents have been verified to ship.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h2 class="spacer10">email - proglove@msn.com</h2>
           <h2 class="spacer10 paddingRight1">  To place an order, or request free samples!</h2>
       </div>
-        <h2 class="largeFont3">Review the 5 pages on this flyer, and print them for your files!</h2>
+        <h2 class="largeFont3">Review the 6 pages on this flyer, and print them for your files!</h2>
     </div>
     <div id="page2" class="pageBorder">
       <h2 class="spacer40 largeFont4 darkBlue">ATTRACTIVE - FUN - COOL COLORS!</h2>
@@ -191,48 +191,26 @@
       </div>
       <h1>PROTECT GLOVE 1-800-344-2851 or 1-855-344-2851<br>PROGLOVE@MSN.COM</h1>
     </div>
-    <div id="page6a.combo" class="pageBorder">
-      <h1 class="largeFont4 stretch1 spacerbot0 spacertop25"><span class="green">Cut Cost</span> - Exam Dental Gloves<span class="green">$$$</h1>
-      <h1 class="largeFont3 spacer0">The Following Brands $</h1>
-      <h1 class="largeFont5 spacertop25">Adenna +  Maytex</h1>
-      <h1 class="largeFont2">We'll <span class="underline">Meet</span> or <span class="underline">Beat</span> Any Price $</h1>
-      <h1 class="largeFont5 bold red spacer10">PLUS</h1>
-      <h1 class="largeFont4 spacer0">Thousands of <span class="italics green">Free</span> Award Winning Gloves</h1>
-      <h1 class="largeFont5 italics underline stretch1 green spacertop0">Forever!</h1>
-      <h1 class="largeFont3">E-mail - Brand - Glove Name - Price!</h1>
-      <h3 class="largeFont3">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
-      <div class="flex-container1">
+    <div id="page6" class="pageBorder">
+      <h1 class="largeFont5 itallics stretch1 spacerbot0 spacertop25 navyBlue">Cut Cost - Exam Dental Gloves$$$</h1>
+      <h1 class="largeFont3 spacer0">The Following Brand $</h1>
+      <h1 class="largeFont6 spacer5 stretch1 ">Adenna</h1>
+      <h1 class="largeFont2 spacer10">We'll <span class="italics largeFont3">Meet</span> or <span class="italics largeFont3">Beat</span> Any Price $</h1>
+      <h1 class="largeFont5 bold itallics spacer10">PLUS</h1>
+      <h1 class="largeFont4 spacer0 italics">Thousands of <span class=" green">Free Award Winning Gloves</span> </h1>
+      <h1 class="largeFont5 italics underline stretch1 red spacertop0">Forever!</h1>
+      <h1 class="largeFont3 navyBlue spacer5">E-mail - Brand - Glove Name - Price!</h1>
+      <h3 class="largeFont3 spacer5">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
+      <div class=" paddingLeft20 flex-container1">
         <div class="orderNow">
-          <h3 class="spacertop20">ORDER <br>NOW!</h3>
+          <h3 class=" largeFont3 spacertop20">ORDER <br>NOW!</h3>
         </div>
-        <div class="callToday largeFont1">
+        <div class="callToday largeFont2">
           <h4 class="spacer20">CALL TODAY or EMAIL PROTECT GLOVE</h4>
           <h4  class="spacertop10 spacerbot0">1-800-344-2851 or email proglove@msn.com</h4>
         </div>
       </div>
-      <h1 class="italics largeFont4 stretch1 spacer10 navyBlue">FREE FREIGHT - NO HANDLING FEES!</h1>
+      <h1 class="italics largeFont4 stretch1 spacer10 ">FREE FREIGHT - NO HANDLING FEES!</h1>
     </div>
-    <div id="page6a.Addena" class="pageBorder">
-      <h1 class="largeFont4 stretch1 spacerbot0 spacertop25"><span class="green">Cut Cost</span> - Exam Dental Gloves<span class="green">$$$</h1>
-      <h1 class="largeFont3 spacer0">The Following Brands $</h1>
-      <h1 class="largeFont5 spacertop25">Adenna</h1>
-      <h1 class="largeFont2">We'll <span class="underline">Meet</span> or <span class="underline">Beat</span> Any Price $</h1>
-      <h1 class="largeFont5 bold red spacer10">PLUS</h1>
-      <h1 class="largeFont4 spacer0">Thousands of <span class="italics green">Free</span> Award Winning Gloves</h1>
-      <h1 class="largeFont5 italics underline stretch1 green spacertop0">Forever!</h1>
-      <h1 class="largeFont3">E-mail - Brand - Glove Name - Price!</h1>
-      <h3 class="largeFont3">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
-      <div class="flex-container1">
-        <div class="orderNow">
-          <h3 class="spacertop20">ORDER <br>NOW!</h3>
-        </div>
-        <div class="callToday largeFont1">
-          <h4 class="spacer20">CALL TODAY or EMAIL PROTECT GLOVE</h4>
-          <h4  class="spacertop10 spacerbot0">1-800-344-2851 or email proglove@msn.com</h4>
-        </div>
-      </div>
-      <h1 class="italics largeFont4 stretch1 spacer10 navyBlue">FREE FREIGHT - NO HANDLING FEES!</h1>
-    </div>
-
   </body>
 </html>
