Nuke all text size formatting

--- a/index.html
+++ b/index.html
@@ -7,56 +7,64 @@
   </head>
   <body>
     <div id="page1" class="pageBorder">
-      <p id="banner" class="largeFont5">PROTECT GLOVE. INC.</p>
-      <div class="spacer10">
-        <h1 class="green spacer5 largeFont4">AWARD WINNING HAND CARE</h1>
-        <h2 class="spacer10 largeFont2">DENTAL EXAMINATION GLOVES</h2>
+      <div id="jumpStart" class="rotate20 1 spacertop25">
+          <div class="jumpContainer">
+            <h1 class="spacer0 ">JUMP START</h1>
+          </div>
+          <div class="savingsContainer">
+            <h1 class="spacer0">SAVING $$</h1>
+        </div>
       </div>
-      <h2 class="spacer40 largeFont4 red">ONE FULL YEAR $$$ EXTREME <br>SAVINGS!</h2>
-      <h2 class="spacer40 largeFont2">DOUBLE REWARDS!!!</h2>
-      <h1 class="spacer40 orange largeFont5 navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves and Rewards!!!</h1>
-      <h2 class="spacer0 largeFont3">REWARDS!</h2>
-      <h2 class="spacer5 largeFont1 spacertop0">Every 7 cases, over any period of time you buy!</h2>
-      <p class="spacer5 largeFont1 "><span class="highlightYellow">SAVE OVER $1.00 on EVERY 100 GLOVES</span></p>
-      <h2 class="spacer20 largeFont2 stretch1 spacerbot40"><span class="largeFont3">1000</span> Free Glove Rewards! Never Stop! Forever!</h2>
+      <p id="banner" class=" spacertop25">PROTECT GLOVE. INC.</p>
+      <div class="spacer10">
+        <h1 class="blue spacer5 ">AWARD WINNING HAND CARE</h1>
+        <h2 class="spacer10 2">DENTAL EXAMINATION GLOVES</h2>
+      </div>
+      <h2 class="spacer40 4 red">ONE FULL YEAR $$$ EXTREME <br>SAVINGS!</h2>
+      <h2 class="spacer40 2">DOUBLE REWARDS!!!</h2>
+      <h1 class="spacer40 orange 5 navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves and Rewards!!!</h1>
+      <h2 class="spacer0 3">REWARDS!</h2>
+      <h2 class="spacer5 1 spacertop0">Every 7 cases, over any period of time you buy!</h2>
+      <p class="spacer5 1 "><span class="highlightYellow">SAVE OVER $1.00 on EVERY 100 GLOVES</span></p>
+      <h2 class="spacer20 2 stretch1 spacerbot40"><span class="3">1000</span> Free Glove Rewards! Never Stop! Forever!</h2>
       <div class="contactBlock1">
           <h2 class="spacer10">CONTACT US</h2>
           <h2 class="spacer10">email - proglove@msn.com</h2>
           <h2 class="spacer10 paddingRight1">  To place an order, or request free samples!</h2>
       </div>
-        <h2 class="largeFont3">Review the 6 pages on this flyer, and print them for your files!</h2>
+        <h2 class="3">Review the 6 pages on this flyer, and print them for your files!</h2>
     </div>
     <div id="page2" class="pageBorder">
-      <h2 class="spacer40 largeFont4 darkBlue">ATTRACTIVE - FUN - COOL COLORS!</h2>
-      <h2 class="spacer10 largeFont2">PLUS PREMIUM - BLUE/PURPLE NITRILE - GREAT PRICE!</h2>
-      <h2 class="spacer10 largeFont2">GREAT PRICE - BEST QUALITY - BEST REWARDS!</h2>
-      <p class="largeFont1">FREE GLOVES - <span class="underline">REWARDS</span> <br><span class="underline">SAVE</span><br>50 TO 70 CENTS<br>EVERY 100 GLOVES</p>
-      <h1 class="darkBlue largeFont4 stretch2 spacer20">FREQUENT BUYER REWARDS!</h1>
-      <h3 class="spacer10 largeFont3">Just buy 7 cases, over any period of time and choose your reward!</h3>
-      <h3 class="spacer10 largeFont3">1000 FREE GLOVES or $50.00 gift card to a retail establisment of your choice!</h3>
-      <h3 class="spacer20 largeFont3 stretch2 italics">CALL or email for a<br> FREE sample today!</h3>
-      <h3 class="largeFont3">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
+      <h2 class="spacer40 4 red">ATTRACTIVE - FUN - COOL COLORS!</h2>
+      <h2 class="spacer10 3"><span class="blue">BLUE</span>, <span class="hotPinkText">HOT PINK</span>, <span class="coralText">CORAL</span>, <span class="darkBlue">DARK BLUE</span>, <span class="purple">PURPLE</span> NITRILE</h2>
+      <h2 class="spacer10 2">GREAT PRICE - BEST QUALITY - BEST REWARDS!</h2>
+      <p class="1">FREE GLOVES - <span class="underline">REWARDS</span> <br><span class="underline">SAVE</span><br>50 TO 70 CENTS<br>EVERY 100 GLOVES</p>
+      <h1 class="darkBlue 4 stretch2 spacer20">FREQUENT BUYER REWARDS!</h1>
+      <h3 class="spacer10 3">Just buy 7 cases, over any period of time and choose your reward!</h3>
+      <h3 class="spacer10 3">1000 FREE GLOVES or $50.00 gift card to a retail establisment of your choice!</h3>
+      <h3 class="spacer20 3 stretch2 italics">CALL or email for a<br> FREE sample today!</h3>
+      <h3 class="3">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
       <div class="flex-container1">
         <div class="orderNow">
           <h3 class="spacertop20">ORDER <br>NOW!</h3>
         </div>
-        <div class="callToday largeFont1">
+        <div class="callToday 1">
           <h4 class="spacer20">CALL TODAY or EMAIL PROTECT GLOVE</h4>
           <h4  class="spacertop10">1-800-344-2851 or email proglove@msn.com</h4>
         </div>
       </div>
     </div>
     <div id="page3" class="pageBorder paddingBottom">
-      <p class="largeFont4 italics spacer20">LOWEST PRICE * BEST REWARDS!</p>
-      <h1 class="largeFont3 spacer20">ULTIMATE QUALITY!</h1>
+      <p class="4 italics spacer20">LOWEST PRICE * BEST REWARDS!</p>
+      <h1 class="3 spacer20">ULTIMATE QUALITY!</h1>
       <div class="adenna">
         <div class="adennaDetails blue">
-          <h1 class="largeFont3 spacerbot0">ADENNA MIRACLE - BLUE NITRILE GLOVE</h1>
+          <h1 class="3 spacerbot0">ADENNA MIRACLE - BLUE NITRILE GLOVE</h1>
             <div class="adenna-grid">
               <div class="adennaItem1">
-              <h1 class="spacer10 largeFont2">Only $5.75 per 100 gloves</h1>
-              <h1 class="spacer10 largeFont2">$11.50 per box 200 gloves</h1>
-              <h1 class="spacertop0 largeFont2">10 boxes per case - 2000 gloves</h1>
+              <h1 class="spacer10 2">GREAT PRICE only <span class="red">$5.75</span> per 100 gloves</h1>
+              <h1 class="spacer10 2">$11.50 per box 200 gloves</h1>
+              <h1 class="spacertop0 2">10 boxes per case - 2000 gloves</h1>
             </div>
                 <div class="CliniciansReport black">
                   <h4>Clinicians Report</h4>
@@ -65,16 +73,16 @@
                 </div>
             </div>
           </div>
-          <h1 class="spacer5 red largeFont2">After reward price $5.25 per 100 gloves</h1>
+          <h1 class="spacer5 red 2">After reward price $5.25 per 100 gloves</h1>
         </div>
           <div class="StarMedPlus purple">
-          <h1 class="largeFont3 spacerbot0">STAR MED PLUS - ROYAL PURPLE NITRILE</h1>
-          <h1 class="largeFont2 spacer10">GREAT PRICE only $5.65 per 100 gloves</h1>
-          <h1 class="largeFont2 spacer10">$16.95 per box - 300 gloves</h1>
-          <h1 class="largeFont2 spacer10">10 boxes per case  $169.50 per case - 3000 gloves</h1>
-          <h1 class="red largeFont2 spacertop0">After reward price $5.15 per 100 gloves</h1>
+          <h1 class="3 spacerbot0">STAR MED PLUS - ROYAL PURPLE NITRILE</h1>
+          <h1 class="2 spacer10">GREAT PRICE only <span class="red">$5.65</span> per 100 gloves</h1>
+          <h1 class="2 spacer10">$16.95 per box - 300 gloves</h1>
+          <h1 class="2 spacer10">10 boxes per case  $169.50 per case - 3000 gloves</h1>
+          <h1 class="red 2 spacertop0">After reward price $5.15 per 100 gloves</h1>
         </div>
-        <h1 class="largeFont4 stretch1 spacertop0">FREE GLOVES ALL YEAR!</h1>
+        <h1 class="4 stretch1 spacertop0">FREE GLOVES ALL YEAR!</h1>
         <h1 class="spacer10">Just buy 7 cases, over any period of time and choose your reward!</h1>
         <h1 class="spacer10">1000 free gloves or $50.00 gift card</h1>
         <h1 class="spacer10">to the establisment of your choice!</h3>
@@ -92,9 +100,9 @@
       </div>
     </div>
     <div id="page4" class="acme pageBorder">
-      <h3 class="largeFont3 spacer5 red">ATTRACTIVE COLORS PLUS HEALTHY HANDS <br>FOREVER!</h3>
-      <h3 class="largeFont3 spacertop0">AWARD WINNING NITRILE GLOVES WITH MOISTUIRIZERS!</h3>
-      <div class="grid-containerBoxes largeFont1 spacerbot40">
+      <h3 class="3 spacer5 red">ATTRACTIVE COLORS PLUS HEALTHY HANDS <br>FOREVER!</h3>
+      <h3 class="3 spacertop0">AWARD WINNING NITRILE GLOVES WITH MOISTUIRIZERS!</h3>
+      <div class="grid-containerBoxes 1 spacerbot40">
         <div class="ocean box">
           <h2>"OCEAN"</h2>
           <h2>Cool Aqua Blue</h2>
@@ -120,9 +128,9 @@
           <h2>Miami Beach Dental Show 2016</h2>
         </div>
       </div>
-      <h2 class="largeFont1 spacer0">SUPER stretchy - 2nd skin feel - comfortable fit!</h2>
-      <h2 class="largeFont1 spacer0">ONLY $6.49 per box of 100 gloves!</h2>
-      <h2 class="largeFont1 spacertop0 spacerbot40">20 boxes per case - mix sizes and brands to make a full case!</h2>
+      <h2 class="1 spacer0">SUPER stretchy - 2nd skin feel - comfortable fit!</h2>
+      <h2 class="1 spacer0">ONLY $6.49 per box of 100 gloves!</h2>
+      <h2 class="1 spacertop0 spacerbot40">20 boxes per case - mix sizes and brands to make a full case!</h2>
       <div class="grid-containerContactFreeGloves">
         <div class="calltodayBlock">
           <h2 class="spacer5"><span class="underline">CALL TODAY or EMAIL</span> <br>PROTECT GLOVE</h2>
@@ -134,16 +142,16 @@
           <h1 class="spacer0"><span class="underline">SAVE</span><br>50 TO 70 CENTS <br>EVERYONE 100 GLOVES YOU BUY!</h1>
         </div>
       </div>
-      <h2 class="largeFont2 stretch2 spacer10">FREQUENT BUYER REWARDS - ALL YEAR LONG!</h2>
+      <h2 class="2 stretch2 spacer10">FREQUENT BUYER REWARDS - ALL YEAR LONG!</h2>
       <h1 class="spacer5">Just buy 7 cases, over any period of time and choose your reward!</h1>
       <h1 class="spacer5">1000 FREE GLOVES or $50.00 gift card to a retail establishment of your choice!!</h1>
     </div>
     <div id="page5" class="pageBorder">
-      <h1 class="spacer20 largeFont5 stretch3 spacerbot0">No more dry hands!</h1>
+      <h1 class="spacer20 5 stretch3 spacerbot0">No more dry hands!</h1>
       <div id="koolTouch">
-      <h1 class="marker spacer10 largeFont3">KOOLTOUCH-E</h1>
+      <h1 class="marker spacer10 3">KOOLTOUCH-E</h1>
       </div>
-      <h2 class="spacer5 spacerbot20 largeFont2"><span class="highlightYellow">Bright white Nitrile with moisturizer</span></h2>
+      <h2 class="spacer5 spacerbot20 2"><span class="highlightYellow">Bright white Nitrile with moisturizer</span></h2>
       <div class="flex-containerThreebox">
         <div class="indivSpacer5" id="gloveRewardsp5">
             <h2 class="spacer0">FREE GLOVES - REWARDS!</h2>
@@ -157,7 +165,7 @@
           <h2 class="spacer5">nitrile glove</h2>
         </div>
       </div>
-      <div class="largefont20px">
+      <div class="20px">
         <h1 class="spacer5">Super stretchy - 2nd skin feel - comfortable fit!</h1>
         <h1 class="spacer5 stretch1"><span class="highlightYellow">Treat yourself to soft and healthy hands!</span></h1>
         <h1 class="spacer10">The Nitrile KOOLTOUCH BLUE and KOOLTOUCHe white <br>packaged 150 gloves per box, 20 boxes per case.</h1>
@@ -166,14 +174,14 @@
         <h1 class="spacer10 stretch1">Saves time in replenishing workstations,</h1>
         <h1 class="spacer10 stretch1">Order less frequently!</h1>
       </div>
-      <h1 class="largeFont2 ">KOOLTOUCHe and KOOLTOUCH <span class="highlightBlue">BLUE</span></h1>
-      <h1 class="largeFont2 ">SPACE-SAVER PACKAGING!!</h1>
+      <h1 class="2 ">KOOLTOUCHe and KOOLTOUCH <span class="highlightBlue">BLUE</span></h1>
+      <h1 class="2 ">SPACE-SAVER PACKAGING!!</h1>
       <div class="pg5splitContainer1">
         <div id="pg5100gloves">
-          <h1><span class=" largeFont2 highlightYellow">$5.99 - 100 Gloves<span></h1>
+          <h1><span class=" 2 highlightYellow">$5.99 - 100 Gloves<span></h1>
         </div>
         <div id="pg5150gloves">
-          <h1><span class="largeFont2 highlightYellow">$8.985 - 150 Gloves<span></h1>
+          <h1><span class="2 highlightYellow">$8.985 - 150 Gloves<span></h1>
         </div>
       </div>
       <h1>Mix-sizes and colors to form a full case</h1>
@@ -183,34 +191,34 @@
           <h1>Order today!</h1>
         </div>
         <div class="pg5splitContainer4">
-          <p class="largeFont3 spacertop2">#1</p>
+          <p class="3 spacertop2">#1</p>
           <div>
-            <p class="largefont20px paddingBot"><span class="highlightYellow">SELLING GLOVE<br>IN THE WORLD</span><br>100 MILLION PER MONTH!</p>
+            <p class="20px paddingBot"><span class="highlightYellow">SELLING GLOVE<br>IN THE WORLD</span><br>100 MILLION PER MONTH!</p>
           </div>
         </div>
       </div>
       <h1>PROTECT GLOVE 1-800-344-2851 or 1-855-344-2851<br>PROGLOVE@MSN.COM</h1>
     </div>
     <div id="page6" class="pageBorder">
-      <h1 class="largeFont5 itallics stretch1 spacerbot0 spacertop25 navyBlue">Cut Cost - Exam Dental Gloves$$$</h1>
-      <h1 class="largeFont3 spacer0">The Following Brand $</h1>
-      <h1 class="largeFont6 spacer5 stretch1 ">Adenna</h1>
-      <h1 class="largeFont2 spacer10">We'll <span class="italics largeFont3">Meet</span> or <span class="italics largeFont3">Beat</span> Any Price $</h1>
-      <h1 class="largeFont5 bold itallics spacer10">PLUS</h1>
-      <h1 class="largeFont4 spacer0 italics">Thousands of <span class=" green">Free Award Winning Gloves</span> </h1>
-      <h1 class="largeFont5 italics underline stretch1 red spacertop0">Forever!</h1>
-      <h1 class="largeFont3 navyBlue spacer5">E-mail - Brand - Glove Name - Price!</h1>
-      <h3 class="largeFont3 spacer5">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
+      <h1 class="5 itallics stretch1 spacerbot0 spacertop25 navyBlue">Cut Cost - Exam Dental Gloves$$$</h1>
+      <h1 class="3 spacer0">The Following Brand $</h1>
+      <h1 class="6 spacer5 stretch1 ">Adenna</h1>
+      <h1 class="2 spacer10">We'll <span class="italics 3">Meet</span> or <span class="italics 3">Beat</span> Any Price $</h1>
+      <h1 class="5 bold itallics spacer10">PLUS</h1>
+      <h1 class="4 spacer0 italics">Thousands of <span class=" green">Free Award Winning Gloves</span> </h1>
+      <h1 class="5 italics underline stretch1 red spacertop0">Forever!</h1>
+      <h1 class="3 navyBlue spacer5">E-mail - Brand - Glove Name</h1>
+      <h3 class="3 spacer5">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
       <div class=" paddingLeft20 flex-container1">
         <div class="orderNow">
-          <h3 class=" largeFont3 spacertop20">ORDER <br>NOW!</h3>
+          <h3 class=" 3 spacertop20">ORDER <br>NOW!</h3>
         </div>
-        <div class="callToday largeFont2">
+        <div class="callToday 2">
           <h4 class="spacer20">CALL TODAY or EMAIL PROTECT GLOVE</h4>
           <h4  class="spacertop10 spacerbot0">1-800-344-2851 or email proglove@msn.com</h4>
         </div>
       </div>
-      <h1 class="italics largeFont4 stretch1 spacer10 ">FREE FREIGHT - NO HANDLING FEES!</h1>
+      <h1 class="italics 4 stretch1 spacer10 ">FREE FREIGHT - NO HANDLING FEES!</h1>
     </div>
   </body>
 </html>
