page one complete.

--- a/index.html
+++ b/index.html
@@ -2,37 +2,33 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/styles2.css" rel="stylesheet" type="text/css">
     <title>Protect Glove. INC.</title>
   </head>
   <body>
     <div id="page1" class="pageBorder">
-      <div id="jumpStart" class="rotate20 1 spacertop25">
-          <div class="jumpContainer">
-            <h1 class="spacer0 ">JUMP START</h1>
-          </div>
-          <div class="savingsContainer">
-            <h1 class="spacer0">SAVING $$</h1>
-        </div>
+      <div id="jumpStart" class="rotate20 largeFont175em jumpstart">
+            <h1 class="spacer0">JUMP START</h1>
+            <h1 class="spacer0 marginleft2em">SAVING $$</h1>
       </div>
-      <p id="banner" class=" spacertop25">PROTECT GLOVE. INC.</p>
+      <p id="banner" class=" largeFont4em spacer005em">PROTECT GLOVE. INC.</p>
       <div class="spacer10">
-        <h1 class="blue spacer5 ">AWARD WINNING HAND CARE</h1>
-        <h2 class="spacer10 2">DENTAL EXAMINATION GLOVES</h2>
+        <h1 class="blue largeFont3em spacer005em">AWARD WINNING HAND CARE</h1>
+        <h2 class="spacer10 largeFont1em spacer025em ">DENTAL EXAMINATION GLOVES</h2>
       </div>
-      <h2 class="spacer40 4 red">ONE FULL YEAR $$$ EXTREME <br>SAVINGS!</h2>
-      <h2 class="spacer40 2">DOUBLE REWARDS!!!</h2>
-      <h1 class="spacer40 orange 5 navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves and Rewards!!!</h1>
-      <h2 class="spacer0 3">REWARDS!</h2>
-      <h2 class="spacer5 1 spacertop0">Every 7 cases, over any period of time you buy!</h2>
-      <p class="spacer5 1 "><span class="highlightYellow">SAVE OVER $1.00 on EVERY 100 GLOVES</span></p>
-      <h2 class="spacer20 2 stretch1 spacerbot40"><span class="3">1000</span> Free Glove Rewards! Never Stop! Forever!</h2>
+      <h2 class="spacer40 largeFont3em spacer025em red">ONE FULL YEAR $$$ EXTREME <br>SAVINGS!</h2>
+      <h2 class="spacer40 largeFont1em spacer005em 2">DOUBLE REWARDS!!!</h2>
+      <h1 class="spacer40 orange largeFont3em spacer025em navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves and Rewards!!!</h1>
+      <h2 class="spacer025em largeFont175em">REWARDS!</h2>
+      <h2 class="spacer005em spacertop0">Every 7 cases, over any period of time you buy!</h2>
+      <p class="spacer005em largeFont1em"><span class="highlightYellow">SAVE OVER $1.00 on EVERY 100 GLOVES</span></p>
+      <h2 class="spacer05em 2 stretch1 "><span class="3">1000</span> Free Glove Rewards! Never Stop! Forever!</h2>
       <div class="contactBlock1">
-          <h2 class="spacer10">CONTACT US</h2>
-          <h2 class="spacer10">email - proglove@msn.com</h2>
-          <h2 class="spacer10 paddingRight1">  To place an order, or request free samples!</h2>
+          <h2 class="spacer005em">CONTACT US</h2>
+          <h2 class="spacer005em">email - proglove@msn.com</h2>
+          <h2 class="spacer005em paddingRight1">  To place an order, or request free samples!</h2>
       </div>
-        <h2 class="3">Review the 6 pages on this flyer, and print them for your files!</h2>
+        <h2 class="largeFont1em spacer025em">Review the 6 pages on this flyer, and print them for your files!</h2>
     </div>
     <div id="page2" class="pageBorder">
       <h2 class="spacer40 4 red">ATTRACTIVE - FUN - COOL COLORS!</h2>
