--- a/index.html
+++ b/index.html
@@ -14,43 +14,43 @@
       <p id="banner" class=" largeFont4em spacer005em">PROTECT GLOVE. INC.</p>
       <div class="spacer10">
         <h1 class="blue largeFont3em spacer005em">AWARD WINNING HAND CARE</h1>
-        <h2 class="spacer10 largeFont1em spacer025em ">DENTAL EXAMINATION GLOVES</h2>
+        <h2 class="spacer10 largeFont15em spacer025em ">DENTAL EXAMINATION GLOVES</h2>
       </div>
       <h2 class="spacer40 largeFont3em spacer025em red">ONE FULL YEAR $$$ EXTREME <br>SAVINGS!</h2>
-      <h2 class="spacer40 largeFont1em spacer005em 2">DOUBLE REWARDS!!!</h2>
+      <h2 class="spacer40 largeFont15em spacer005em 2">DOUBLE REWARDS!!!</h2>
       <h1 class="spacer40 orange largeFont3em spacer025em navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves and Rewards!!!</h1>
       <h2 class="spacer025em largeFont175em">REWARDS!</h2>
       <h2 class="spacer005em spacertop0">Every 7 cases, over any period of time you buy!</h2>
-      <p class="spacer005em largeFont1em"><span class="highlightYellow">SAVE OVER $1.00 on EVERY 100 GLOVES</span></p>
+      <p class="spacer005em largeFont15em"><span class="highlightYellow">SAVE OVER $1.00 on EVERY 100 GLOVES</span></p>
       <h2 class="spacer05em 2 stretch1 "><span class="3">1000</span> Free Glove Rewards! Never Stop! Forever!</h2>
       <div class="contactBlock1">
           <h2 class="spacer005em">CONTACT US</h2>
           <h2 class="spacer005em">email - proglove@msn.com</h2>
           <h2 class="spacer005em paddingRight1">  To place an order, or request free samples!</h2>
       </div>
-        <h2 class="largeFont1em spacer025em">Review the 6 pages on this flyer, and print them for your files!</h2>
+        <h2 class="largeFont15em spacer025em">Review the 6 pages on this flyer, and print them for your files!</h2>
     </div>
     <div id="page2" class="pageBorder">
-      <h2 class="spacer40 4 red">ATTRACTIVE - FUN - COOL COLORS!</h2>
-      <h2 class="spacer10 3"><span class="blue">BLUE</span>, <span class="hotPinkText">HOT PINK</span>, <span class="coralText">CORAL</span>, <span class="darkBlue">DARK BLUE</span>, <span class="purple">PURPLE</span> NITRILE</h2>
+      <h1 class="largeFont2em red">ATTRACTIVE - FUN - COOL COLORS!</h2>
+      <h2 class="spacer10 text34px y50percent"><span class="blue">BLUE</span>, <span class="hotPinkText">HOT PINK</span>, <span class="coralText">CORAL</span>, <span class="darkBlue">DARK BLUE</span>, <span class="purple">PURPLE</span> NITRILE</h2>
       <h2 class="spacer10 2">GREAT PRICE - BEST QUALITY - BEST REWARDS!</h2>
-      <p class="1">FREE GLOVES - <span class="underline">REWARDS</span> <br><span class="underline">SAVE</span><br>50 TO 70 CENTS<br>EVERY 100 GLOVES</p>
-      <h1 class="darkBlue 4 stretch2 spacer20">FREQUENT BUYER REWARDS!</h1>
-      <h3 class="spacer10 3">Just buy 7 cases, over any period of time and choose your reward!</h3>
-      <h3 class="spacer10 3">1000 FREE GLOVES or $50.00 gift card to a retail establisment of your choice!</h3>
-      <h3 class="spacer20 3 stretch2 italics">CALL or email for a<br> FREE sample today!</h3>
-      <h3 class="3">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
+      <p class="largeFont15em  ">FREE GLOVES - <span class="underline">REWARDS</span> <br><span class="underline">SAVE</span><br>50 TO 70 CENTS<br>EVERY 100 GLOVES</p>
+      <h1 class="darkBlue largeFont3em stretch2 spacer20">FREQUENT BUYER REWARDS!</h1>
+      <h3 class="largeFont15em spacerbot0">Just buy 7 cases, over any period of time and choose your reward!</h3>
+      <h3 class=" largeFont15em spacer05em">1000 FREE GLOVES or $50.00 gift card to a retail establisment of your choice!</h3>
+      <h3 class="spacer20 largeFont15em stretch2 italics">CALL or email for a<br> FREE sample today!</h3>
+      <h3 class="largeFont12em">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
       <div class="flex-container1">
-        <div class="orderNow">
-          <h3 class="spacertop20">ORDER <br>NOW!</h3>
+        <div class="orderNow largeFont1">
+          <h3 class="spacer05em y50percent">ORDER <br>NOW!</h3>
         </div>
         <div class="callToday 1">
-          <h4 class="spacer20">CALL TODAY or EMAIL PROTECT GLOVE</h4>
-          <h4  class="spacertop10">1-800-344-2851 or email proglove@msn.com</h4>
+          <h4 class="spacer005em  largeFont15em">CALL TODAY or EMAIL PROTECT GLOVE</h4>
+          <h4  class="spacer005em largeFont15em">1-800-344-2851 or email proglove@msn.com</h4>
         </div>
       </div>
     </div>
-    <div id="page3" class="pageBorder paddingBottom">
+    <div id="page3" class="pageBorder">
       <p class="4 italics spacer20">LOWEST PRICE * BEST REWARDS!</p>
       <h1 class="3 spacer20">ULTIMATE QUALITY!</h1>
       <div class="adenna">
