top of p3 firmly position at the top of the page when printed.

--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
       </div>
     </div>
     <div id="page3" class="pageBorder">
-      <p class="4 italics spacer20">LOWEST PRICE * BEST REWARDS!</p>
-      <h1 class="3 spacer20">ULTIMATE QUALITY!</h1>
+      <p class="text60px spacertop25 spacerbot0 italics">LOWEST PRICE * BEST REWARDS!</p>
+      <h1 class="3 spacer025em">ULTIMATE QUALITY!</h1>
       <div class="adenna">
         <div class="adennaDetails blue">
-          <h1 class="3 spacerbot0">ADENNA MIRACLE - BLUE NITRILE GLOVE</h1>
+          <h6 class="largeFont215em spacerbot0">ADENNA MIRACLE - BLUE NITRILE GLOVE</h6>
             <div class="adenna-grid">
-              <div class="adennaItem1">
-              <h1 class="spacer10 2">GREAT PRICE only <span class="red">$5.75</span> per 100 gloves</h1>
-              <h1 class="spacer10 2">$11.50 per box 200 gloves</h1>
-              <h1 class="spacertop0 2">10 boxes per case - 2000 gloves</h1>
+              <div class="adennaItem1 largeFont2em">
+              <h6 class="spacer0">GREAT PRICE only <span class="red">$5.75</span> per 100 gloves</h6>
+              <h6 class="spacer0">$11.50 per box 200 gloves</h6>
+              <h6 class="spacer0">10 boxes per case - 2000 gloves</h6>
             </div>
                 <div class="CliniciansReport black">
                   <h4>Clinicians Report</h4>
